# poetry_plugin_template

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  renovate.json  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: pipeline.yml  release-management.yaml
src/poetry_plugin_cookiecutter/: __init__.py  command.py  layout.py  plugin.py
tests/unit/: test_placeholder.py
