[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "poetry_plugin_cookiecutter"
version = "0.0.0"
description = "Poetry plugin to add cookiecutter command."
authors = ["David Pugh <djpugh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^1.3"
cookiecutter = "^2.1"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
flake8-import-order = "^0.18.2"
flake8-eradicate = "^1.4.0"
flake8-docstrings = "^1.6.0"
bandit = "^1.7.4"
isort = "^5.10.1"
mypy = "^0.961"
pre-commit = "^2.19.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
versioneer = "^0.22"
Sphinx = "^5.0.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"
metadata = true
dirty = true

[tool.poetry-dynamic-versioning.substitution]
folders = [{ path = "src" }]

[tool.poetry.plugins."poetry.application.plugin"]
cookiecutter-command = "poetry_plugin_cookiecutter.plugin:CookiecutterPlugin"

[tool.mypy]
mypy_path = "src/"
ignore_missing_imports = true

